...
                            VStack(spacing: 10){
                                Text("Price drop").font(.title2)
                                Text("You can choose the default settings to receive notifications about your tracked products when the price drops.").foregroundColor(Color("PrimaryLabel")).font(.callout)
                                Text("This setting can be overridden for each product you track by opening the product page").foregroundColor(Color("PrimaryLabel")).font(.caption)
                                Group{
                                    Picker("", selection: $viewModel.dropKey) {
                                        Text("Never").tag("none").accessibilityIdentifier("NeverSettingsPicker")
                                        Text("Percentage").tag("percentage").accessibilityIdentifier("PercentageSettingsPicker")
                                        Text("Value").tag("value").accessibilityIdentifier("ValueSettingsPicker")
                                        //Text("Price").tag("price")
                                        Text("Always").tag("always").accessibilityIdentifier("AlwaysSettingsPicker")
                                    }.pickerStyle(.segmented).padding(.vertical)
                                    if(viewModel.dropKey == "percentage") {
                                        CircularSlider($viewModel.dropValuePercentage).frame(width: 150, height: 150, alignment: .center).accessibilityIdentifier("CircularSliderCustomView")
                                    }
                                    if (viewModel.dropKey == "value") {
                                        PickerView($viewModel.dropValue, 200).frame(height: 150)
                                            .accessibilityIdentifier("PickerCustomView")
                                    }
                                    switch viewModel.dropKey {
...
                            VStack(spacing: 10){
                                Text("Comments").font(.title2)
                                Group{
                                    Text("You can choose the default settings to receive notifications about comments in your tracked products.").foregroundColor(Color("PrimaryLabel")).font(.callout)
                                    Text("This setting can be overridden for each product you track by opening the product page").foregroundColor(Color("PrimaryLabel")).font(.caption)
                                    Picker("", selection: $viewModel.commentPolicy) {
                                        Text("Never").tag("never").accessibilityIdentifier("NeverCommentButton")
                                        Text("Always").tag("always").accessibilityIdentifier("AlwaysCommentButton")
                                    }.pickerStyle(.segmented).padding(.vertical)
                                }
                            }.frame(maxWidth: geom.size.width/2).padding(5)
                            
                            
                        }.padding()
...
                            Button{
                                viewModel.saveSetting(percentage: viewModel.dropKey == "percentage")
                            } label: {
                                Text("Change").bold()
                                    .padding(.vertical, 3)
                            }.frame(width: (geom.size.width-40)/3)
                                .accessibilityIdentifier("ChangeSettingsTrackingButton")
                                .padding(.vertical, 7)
                                .background(Color("Primary"))
                                .foregroundColor(Color.white)
                                .cornerRadius(15)
                                .disabled(!viewModel.validateSettings())
                                .opacity(!viewModel.validateSettings() ? 0.5 : 1)
...
