...
                Section{
                    if(appState.isUserLoggedIn){
                        NavigationLink {
                            iPadUserProfileView()
                        } label: {
                            UserCell(userIdentity: appState.userIdentity)
                        }.accessibilityIdentifier("UserProfileNavigationLink")
                    } else {
                        Button{
                            viewModel.showLogin.wrappedValue.toggle()
                        } label: {
                           LoginCell()
                        }
...
                if(appState.isUserLoggedIn){
                    Section(header: Text("Tracking")){
                        NavigationLink {
                            iPadTrackingSettingView()
                        } label: {
                            Text("Product notification")
                        }.accessibilityIdentifier("ProductNotification")

                    }.listRowBackground(Color("SecondaryBackgroundColor"))
                }
                
                Section(header: Text("Notification"), footer: Text("With disabled notification you cannot receive any updated about your tracked product and also general information. Click above to change your notification settings.")){
                    Button{
...
