...

struct LoginCell: View {
    var body: some View {
        VStack(alignment: .leading, spacing: 5){
            Text("Do you know how many thing you can do with an account?").font(.subheadline)
            Text("Login or create your account").font(.body.bold()).foregroundColor(Color("Primary"))
                .accessibilityIdentifier("LoginOrCreateAnAccountButton")
        }.foregroundColor(Color("PrimaryLabel"))
    }
}

struct LoginCell_Previews: PreviewProvider {
    static var previews: some View {
...
