...
                                            }.highPriorityGesture(DragGesture())
                                    }
                                }.frame(width: geometry.size.width, height: 150).accessibilityIdentifier("HomeViewPagingView")
                                Divider()
                            }
                            HStack{
                                Text("Most tracked").font(Font.system(size: 20).bold()).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("HomeViewMostTrackedText")
                                Spacer()
                                NavigationLink {
                                    SeeAllView(apiUrl: AppConstant.getMostTrackedPaging + "?limit=20&page=0", viewTitle: NSLocalizedString("Most tracked", comment: "Most tracked"))
                                } label: {
                                    Text("See All")
                                }.accessibilityIdentifier("HomeViewSeeAllButton")
...
